restructure trade and add history

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -31,5 +31,5 @@ message:
   itemOwned: You have %d %s in your bag.
   moneyOwned: You have $%d in your bag.
   createSell: You place %d sale(s) of %s with price %d:%d
-  createBuy:
+  createBuy: You spend $%d to buy %s under %d:%d
 
