implement mine and list

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,7 @@ shop:
   enable: true
   name: [Stock Market]
   bagName: [Stock Storage]
+  offerName: [My offers]
   sql:
     prefix: StockMarket_
 message:
