--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,13 +7,16 @@ shop:
   sql:
     prefix: StockMarket_
 message:
-  noCreatePermission: You don't have permission to create the shop.
-  noUsePermission: You don't have permission to use shop.
+  noPermission: You don't have permission to do this.
   blockFML: The mod installed on your client is forbidden!
   createShop: The shop for %s have been built!
   enterShop: Entering %s market...
   itemMiss: Item not found, check your item name!
   invalidShop: Invalid shop!
+  moreMoney: You don't have enough money for this trade!
+  moreItem: You will need to sell more items than price
+  noItem: You don't have enough %s!
+  deal: Get %d %s with $%d from %s
   priceButton: Use %d %s to exchange %d emerald
   sellButton: Sell %d %s with %d emerald
   buyButton: Buy %s with %d emerald with price %d:%d
@@ -21,4 +24,39 @@ message:
   moneyOwned: You have $%d in your bag.
   createSell: You place %d sale(s) of %s with price %d:%d
   createBuy: You spend $%d to buy %s under %d:%d
+  highest: Highest buy price %d:%d by %s
+  nohighest: Nobody buying
+  lowest: Lowest sell price %d:%d by %s
+  nolowest: Nobody selling
+  itemName: Item name=
+  incorrectName: Incorrect name! Use /trade hand to see the correct item name on hand.
+  offers:  There are %d sales and %d purchases for %s.
+  norecord: No trade record found!
+  total1: Total sold %s
+  total2: Average price  %s
+  total3: -----Latest sold-----
+  total4: Price  %d-%d
+  total5: From %s To %s
+  total6: Time  %tc%n
+  help:
+    help: /tr(ade) h(elp) --show helps
+    open: /tr(ade) on   --open the storage for stock market
+    list: /tr(ade) l(ist) --list all the product in shop
+    mine: /tr(ade) m(ine) --list my offers and cancel them
+    price: /tr(ade) p(rice) <item> --show the price detail of a specific product
+    hand: /tr(ade) hand --show the name of item on hand
+  lore:
+    flow: Flow number
+    paid: Paid by %s
+    from: Market from %s
+    neverSold: Never sold
+    sold: Sold in %tc%n
+    bought: Bought in %tc%n
+    package: Package %d/%d
+    refund: This is a refund!
+    collect: Collect All!
+    cancel: Click to CANCEL!
+    sell: Sell
+    buy: Buy
+    price: Price
 
