--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: StockMarket
 #main: org.xjcraft.blockFML.OnlineLoginPluginDemo
 main: org.xjcraft.trade.StockMarket
-version: 1.3.2
+api-version: 1.13
+version: ${project.version}
 author: Ree
 description: This plugin is used to simulated a stock market
 website: http://www.xjcraft.org/
