--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ version: ${project.version}
 author: Ree
 description: This plugin is used to simulated a stock market
 website: http://www.xjcraft.org/
-depend: [SimpleSpigot]
+depend: [SimpleSpigot,MultiCurrency]
 
 commands:
     trade:
