--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,8 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.15.2-R0.1-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>M:/Minecraft/Buildtools/spigot-cat73-1.15.2.jar</systemPath>
+            <scope>provided</scope>
+            <!--            <systemPath>M:/Minecraft/Buildtools/spigot-cat73-1.15.2.jar</systemPath>-->
         </dependency>
         <!--Bukkit API-->
         <!--        <dependency>-->
