--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,10 @@
             <id>placeholderapi</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
-
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -105,7 +108,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.16.1-R0.1-SNAPSHOT</version>
+            <version>[1.16.4-R0.1-SNAPSHOT,)</version>
             <scope>provided</scope>
             <!--            <systemPath>M:/Minecraft/Buildtools/spigot-cat73-1.15.2.jar</systemPath>-->
         </dependency>
@@ -113,13 +116,13 @@
         <!--        <dependency>-->
         <!--            <groupId>org.bukkit</groupId>-->
         <!--            <artifactId>bukkit</artifactId>-->
-        <!--            <version>1.16.1-R0.1-SNAPSHOT</version>-->
+        <!--            <version>[1.16.1-R0.1-SNAPSHOT,)</version>-->
         <!--            <scope>provided</scope>-->
         <!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.10</version>
+            <version>LATEST</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -137,7 +140,7 @@
         <dependency>
             <groupId>net.wesjd</groupId>
             <artifactId>anvilgui</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
