--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
     <groupId>xjcraft.org</groupId>
     <artifactId>StockMarket</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
-
+    <version>3.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -44,41 +44,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--            ebean打包-->
-            <plugin>
-                <groupId>io.ebean</groupId>
-                <artifactId>ebean-maven-plugin</artifactId>
-                <version>11.45.1</version>
-                <executions>
-                    <execution>
-                        <id>main</id>
-                        <phase>process-classes</phase>
-                        <configuration>
-                            <transformArgs>debug=1</transformArgs>
-                        </configuration>
-                        <goals>
-                            <goal>enhance</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <!--            包含源码打包-->
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-source-plugin</artifactId>-->
-            <!--                <version>3.0.1</version>-->
-            <!--                <configuration>-->
-            <!--                    <attach>true</attach>-->
-            <!--                </configuration>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <phase>compile</phase>-->
-            <!--                        <goals>-->
-            <!--                            <goal>jar</goal>-->
-            <!--                        </goals>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
         </plugins>
     </build>
 
@@ -107,15 +72,7 @@
             <artifactId>spigot-api</artifactId>
             <version>[1.18.2-R0.1-SNAPSHOT,)</version>
             <scope>provided</scope>
-            <!--            <systemPath>M:/Minecraft/Buildtools/spigot-cat73-1.15.2.jar</systemPath>-->
         </dependency>
-        <!--Bukkit API-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.bukkit</groupId>-->
-        <!--            <artifactId>bukkit</artifactId>-->
-        <!--            <version>[1.19.3-R0.1-SNAPSHOT,)</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -131,20 +88,14 @@
         <dependency>
             <groupId>com.zjyl1994.minecraftplugin</groupId>
             <artifactId>MultiCurrency</artifactId>
-            <version>[1.0-SNAPSHOT,)</version>
+            <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.ebean</groupId>
-            <artifactId>ebean</artifactId>
-            <version>11.35.3</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
         </dependency>   
-        <!-- Ebean annotation processor -->
-        <dependency>
-            <groupId>io.ebean</groupId>
-            <artifactId>ebean-annotation</artifactId>
-            <version>6.3</version>
-        </dependency>
         <dependency>
             <groupId>net.wesjd</groupId>
             <artifactId>anvilgui</artifactId>
