--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.30</version>
+            <version>[8.0.0,)</version>
+            <scope>provided</scope>
         </dependency>   
         <dependency>
             <groupId>net.wesjd</groupId>
