--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
 ﻿StockMarket:
-  jdbcUrl: "jdbc:mysql://localhost:3306/sys"
-  username: "root"
-  password: "123456"
+  jdbcUrl: "jdbc:mysql://localhost:3306/dbname"
+  username: "username"
+  password: "password"
